methods.picture.PictureMono2.scala.error
Erreur de compilation :
PictureMono2:99: error: not found: value droitesV
  droitesV()
  ^